--- a/SMS.Web/Views/ClassInfo/Edit.cshtml
+++ b/SMS.Web/Views/ClassInfo/Edit.cshtml
@@ -1,16 +1,16 @@
 ﻿@model SMS.Core.Models.ClassInfoModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
-
 
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Create">
+            <input type="hidden" asp-for="Id"/>
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group col-6">
                 <label asp-for="ClassName"></label>
-                <input asp-for="ClassName" class="form-control"/>
+                <input asp-for="ClassName" class="form-control" />
                 <span asp-validation-for="ClassName" class="text-danger"></span>
             </div>
             <div class="form-group col-6">
@@ -21,8 +21,9 @@
                 <span asp-validation-for="SectionId" class="text-danger"></span>
             </div>
             <div class="form-group offset-2">
-                <button type="submit" class="btn btn-info">Save</button>
+                <button type="submit" class="btn btn-info">Update</button>
             </div>
         </form>
     </div>
 </div>
+
