--- a/SMS.Web/Views/Shared/_Sidebar.cshtml
+++ b/SMS.Web/Views/Shared/_Sidebar.cshtml
@@ -57,9 +57,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../../index3.html" class="nav-link">
+                            <a href="/Admission/Index" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Dashboard v3</p>
+                                <p>Admission Form</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Result/Index" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Result</p>
                             </a>
                         </li>
                     </ul>
