--- a/SMS.Web/Views/Shared/_Sidebar.cshtml
+++ b/SMS.Web/Views/Shared/_Sidebar.cshtml
@@ -68,6 +68,18 @@
                                 <p>Result</p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/AdmissionFee/Index" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Admission Fee</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/MonthlyFee/Index" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Monthly Fee</p>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item">
